--- a/src/pages/videopage/VideoPage.css
+++ b/src/pages/videopage/VideoPage.css
@@ -47,11 +47,43 @@
   cursor: pointer;
 }
 
-.video-thumbnail-img {
+/* .video-thumbnail-img {
   width: 100%;
   height: auto;
   display: block;
   border-radius: 0;
+} */
+
+/* .video-player {
+  width: 100%;
+  max-width: 1000px;
+  border-radius: 10px;
+  margin-bottom: 4rem;
+} */
+ 
+ /* .video-thumbnail,
+.video-thumbnail-img,
+.video-player {
+  aspect-ratio: 16 / 9;
+} */
+
+.video-thumbnail-img {
+  width: 100%;
+  max-height: 450px;
+  object-fit: cover;
+  border-radius: 10px;
+  display: block;
+  margin: 0 auto;
+}
+
+.video-player {
+  width: 100%;
+  max-width: 800px;
+  max-height: 500px;
+  height: auto;
+  border-radius: 10px;
+  display: block;
+  margin: 2rem auto 4rem;
 }
 
 .video-overlay {
@@ -108,11 +140,14 @@
   background: #871cc6;
 }
 
-.video-player {
-  width: 100%;
-  max-width: 1000px;
-  border-radius: 10px;
-  margin-bottom: 4rem;
+.centered-message {
+  height: 80vh; /* adjust to 100vh if you want full height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: white;
+  text-align: center;
 }
 
 /* =========================
